2008-02-06  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tcl.h (Darwin): workaround conflict between deprecated tcl
	panic macro and panic() function declaration in <mach/mach.h> header.

2009-02-05  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c: Added overflow protections to the
	AppendUtfToUtfRep routine to either avoid invalid arguments and
	crashes, or to replace them with controlled panics.  [Bug 2561794]

2009-02-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c (SetUnicodeObj):       Corrected failure of
	Tcl_SetUnicodeObj() to panic on a shared object.  [Bug 2561488].  Also
	factored out common code to reduce duplication.

2009-01-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c (STRING_SIZE): Corrected failure to limit
	memory allocation requests to the sizes that can be supported by
	Tcl's memory allocation routines.  [Bug 2494093].

2009-01-08  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c (STRING_UALLOC):  Added missing parens
	required to get correct results out of things like
	STRING_UALLOC(num + append).  [Bug 2494093].

2008-12-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIOUtil.c (Tcl_FSGetNormalizedPath):	Added another
	flag value TCLPATH_NEEDNORM to mark those intreps which need more
	complete normalization attention for correct results.  [Bug 2385549]

2008-12-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclFileName.c (TclDoGlob):	One of the 
	Tcl_FSMatchInDirectory() calls did not have its return code
	checked.  Some VFS drivers can return TCL_ERROR, and when that's
	not checked, the error message gets converted into a list of
	matching files returned by [glob], with ridiculous results.

2008-12-01  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIO.c (TclFinalizeIOSubsystem): Revised latest commit to
	something that doesn't crash the test suite.

2008-11-25  Andreas Kupries  <andreask@activestate.com>
