@@ -17,7 +17,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclIOUtil.c,v 1.77.2.39 2008/12/04 17:43:53 dgp Exp $
+ * RCS: @(#) $Id: tclIOUtil.c,v 1.77.2.40 2009/02/20 18:24:28 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -4747,7 +4747,16 @@ FSGetPathType(pathObjPtr, filesystemPtrPtr, driveNameLengthPtr)
 	FsPath *fsPathPtr = (FsPath*) PATHOBJ(pathObjPtr);
 	if (fsPathPtr->cwdPtr != NULL) {
 	    if (PATHFLAGS(pathObjPtr) == 0) {
+		/* The path is not absolute... */
+#ifdef __WIN32__
+		/* ... on Windows we must make another call to determine
+		 * whether it's relative or volumerelative [Bug 2571597]. */
+		return GetPathType(pathObjPtr, filesystemPtrPtr, 
+			driveNameLengthPtr, NULL);
+#else
+		/* On other systems, quickly deduce !absolute -> relative */
 		return TCL_PATH_RELATIVE;
+#endif
 	    }
 	    return FSGetPathType(fsPathPtr->cwdPtr, filesystemPtrPtr, 
 				 driveNameLengthPtr);
