@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: fileName.test,v 1.30.2.9 2008/08/14 13:07:58 dgp Exp $
+# RCS: @(#) $Id: fileName.test,v 1.30.2.10 2009/02/20 18:24:28 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -2000,6 +2000,13 @@ test filename-17.2 {windows specific glob with executable} {winOnly} {
     removeDirectory execglob
     set res
 } {abc.exe}
+test filename-17.3 {Bug 2571597} win {
+    set p /a
+    file pathtype $p
+    file normalize $p
+    file pathtype $p
+} volumerelative
+
 
 test fileName-18.1 {windows - split ADS name correctly} {winOnly} {
     # bug 1194458
